# PeppeThread

./: .clang_format  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: my_rand.h  rw_lock.h  timer.h
src/: main  main.cpp  mandelbrot.c  mandelbrot.csv  pi.c  pi.cpp  program  rw_lock.c  timer.h
src/task1/: execution_times_1_threads.csv  execution_times_2_threads.csv  pi.c  pi_test.py  report_task_1.md
src/task1/benchmarks_nrials=10000000_drand48_r/: execution_times_16_threads.csv  execution_times_1_threads.csv  execution_times_2_threads.csv  execution_times_64_threads.csv  execution_times_8_threads.csv
src/task1/benchmarks_ntrials=1000000_rand_r/: execution_times_16_threads.csv  execution_times_1_threads.csv  execution_times_2_threads.csv  execution_times_64_threads.csv  execution_times_8_threads.csv
src/task1/benchmarks_ntrials=100000_drand48_r/: execution_times_16_threads.csv  execution_times_1_threads.csv  execution_times_2_threads.csv  execution_times_64_threads.csv  execution_times_8_threads.csv
src/task2/: mandelbrot.c  mandelbrot.csv  mandelbrot_test.py  report_task_2.md
src/task2/benchmarks/: execution_times_1_threads.csv  execution_times_20_threads.csv  execution_times_2_threads.csv  execution_times_64_threads.csv  execution_times_8_threads.csv
src/task3/: ppt_ll_rwl.c  pth_ll_rwl.c  report_task_3.md  rw_lock.c  rwlock_test.py
src/task3/ppt_ll_rwl/benchmarks_1024_1024_0.1_0.1/: execution_times_16_threads.csv  execution_times_1_threads.csv  execution_times_20_threads.csv  execution_times_2_threads.csv  execution_times_64_threads.csv  execution_times_8_threads.csv
src/task3/ppt_ll_rwl/benchmarks_1024_1024_0.3_0.2/: execution_times_16_threads.csv  execution_times_1_threads.csv  execution_times_20_threads.csv  execution_times_2_threads.csv  execution_times_64_threads.csv  (+1 more)
utils/: main.py  plot_lab2.py
(+60 files in other folders)
